# MergePicFolders

./: .gitignore  README.md  benchmark.py  benchmark2.py  merge_subfolders.py  output.txt  pyproject.toml  remove_empty.py  setup.py
src/: main.py  window.py  worker.py
src/MergePicFolders/: __main__.py  utils.py  window.py  worker.py
src/MergePicFolders/MergePicFolders.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_utils.py  test_worker.py  test_worker_gui_safety.py
