[project]
name = "MergePicFolders"
version = "1.1"
description = "A modern GUI tool to manage and merge image folders, built with PySide6."
authors = [
    { name = "Alchemist-Aloha" }
]
dependencies = [
    "PySide6",
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
mergepicfolders = "MergePicFolders.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/MergePicFolders"]

[dependency-groups]
dev = [
    "pytest",
]
